--- a/index.html
+++ b/index.html
@@ -90,22 +90,19 @@
 			</div> -->
 			<br>
 			<div class="flex-w">
-					<a href="#" class="flex-c-m size5 bg3 how1 trans-04 m-r-5">
+					<a href="https://www.facebook.com/bpitcsi/" class="flex-c-m size5 bg3 how1 trans-04 m-r-5">
 							<i class="fa fa-facebook"></i>
 						</a>
 	
-						<a href="#" class="flex-c-m size5 bg3 how1 trans-04 m-r-5">
+						<a href="https://www.instagram.com/csi_bpit/?hl=en" class="flex-c-m size5 bg3 how1 trans-04 m-r-5">
 								<i class="fa fa-instagram"></i>
 							</a>
-				<a href="#" class="flex-c-m size5 bg3 how1 trans-04 m-r-5">
-					<i class="fa fa-slack"></i>
-				</a>
 
-				<a href="#" class="flex-c-m size5 bg4 how1 trans-04 m-r-5">
+				<a href="https://in.linkedin.com/company/bpitorg" class="flex-c-m size5 bg4 how1 trans-04 m-r-5">
 					<i class="fa fa-linkedin"></i>
 				</a>
 
-				<a href="#" class="flex-c-m size5 bg4 how1 trans-04 m-r-5">
+				<a href="https://github.com/Bpitorg" class="flex-c-m size5 bg4 how1 trans-04 m-r-5">
 					<i class="fa fa-github "></i>
 				</a>
 
