--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@
                                     </ul>
                                     <div class="progress-bar progress-bar-xs">
                                         <div class="progress-percent progress-percent-s2" data-percent="5"></div>
-                                        <div class="progress-point" data-point="10">Registration </div>
-                                        <div class="progress-point" data-point="30">Dinner</div>
-                                        <div class="progress-point" data-point="40">Evaluation 1</div>
-                                        <!-- <div class="progress-point" data-point="25">Evaluation 1</div> -->
-                                        <div class="progress-point" data-point="65">Breakfast</div>
+                                        <div class="progress-point" data-point="20">10+ Mentors </div>
+                                        <div class="progress-point" data-point="50">500+ SWAGS</div>
+                                        
+                                        <div class="progress-point" data-point="80">100+ Cool Ideas</div>
+                                        <!-- <div class="progress-point" data-point="65">Breakfast</div>
                                         <div class="progress-point" data-point="75">Evaluation 2</div>
                                         <div class="progress-point" data-point="90">Final Showdown</div>
+                                         -->
                                     </div>
                                 </div>
                             </div>
@@ -545,7 +546,7 @@
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                         <h6 class="roadmap-year-s2">DAY 2</h6>
                                         <h5 class="title title-sm roadmap-date">2AM</h5>
-                                        <h5 class="title title-sm roadmap-date">Midnigh Snacks</h5>
+                                        <h5 class="title title-sm roadmap-date">Midnight Snacks</h5>
                                         <div class="roadmap-text">
                                             <p>I am loving it!</p>
                                         </div>
@@ -755,7 +756,7 @@
                                     <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
                                         <div class="team team-s2 team-odd">
                                             <div class="team-photo team-photo-s2">
-                                                <img src="img/prACHI.jpeg" alt="">
+                                                <img src="img/PrachiBajaj.jpg" alt="">
                                             </div>
                                             <h5 class="team-name title title-md">Prachi Bajaj</h5>
                                             <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
