--- a/index.html
+++ b/index.html
@@ -817,9 +817,11 @@
                         style="visibility: visible; animation-delay: 1s;">
                         <a class="btn" href="https://drive.google.com/file/d/1ssVyULGLccfgIvY__R7zYPooH6AnBxF8/view?usp=drivesdk">International Brochure</a>
                     </div>
-                        <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75">
-                            <li class="partner-logo"><img src="images/partners/a-light.png" alt=""></li>
-                            <li class="partner-logo"><img src="images/partners/b-light.png" alt=""></li>
+                    <br>
+                    <br>
+                         <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75"> -->
+                            <li class="partner-logo"><img src="img/sponsors/Rosenfeld.png" alt=""></li>
+                            <!-- <li class="partner-logo"><img src="images/partners/b-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/c-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/d-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/e-light.png" alt=""></li>
