--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                                     </li>
 
                                     <li class="menu-item ">
+                                        <a class="menu-link nav-link menu-toggle" href="https://github.com/hackinitbpit/hackinitbpit.github.io/blob/master/code_of_conduct.md">Code of Conduct</a>
+                                    </li>
+
+                                    <li class="menu-item ">
                                         <a class="menu-link nav-link menu-toggle" href="#contact">Conatct</a>
                                     </li>
                                 </ul>
@@ -808,10 +812,50 @@
                         <!-- OUR SPONSORS -->
     <div id="ourSponsors" class="container container-xxl">
                     <div class="nk-block block-partners text-center">
-                        <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Our Sponsors</h6>
-                        <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
+                        <h4 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="Core Team">Our Sponsors
+                        </h4>
+                        <!-- <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
                         <a class="btn" href="https://drive.google.com/file/d/1xJjXArYeQlJDlMJoicimOjYqwMiCM-Lw/view">Become Our Sponsor</a>
+                    </div>
+                    <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
+                        style="visibility: visible; animation-delay: 1s;">
+                        <a class="btn" href="https://drive.google.com/file/d/1ssVyULGLccfgIvY__R7zYPooH6AnBxF8/view?usp=drivesdk">International Brochure</a>
+                    </div> -->
+                    <br>
+                    <br>
+                         <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75"> -->
+                            <li ><img width="250" src="img/sponsors/Rosenfeld.png" alt=""></li>
+                            <!-- <li class="partner-logo"><img src="images/partners/b-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/c-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/d-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/e-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/f-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/g-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/a-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/b-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/c-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/d-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/e-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/f-light.png" alt=""></li>
+                            <li class="partner-logo"><img src="images/partners/g-light.png" alt=""></li>
+                        </ul> -->
+                    </div>
+                </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+                <div id="ourSponsors" class="container container-xxl">
+                    <div class="nk-block block-partners text-center">
+                        <h4 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="Core Team">Become our Sponsor
+                        </h4>
+                        <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <u>hackinitbpit@gmail.com</u></h6>
+                        <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
+                        style="visibility: visible; animation-delay: 1s;">
+                        <a class="btn" href="https://drive.google.com/file/d/1xJjXArYeQlJDlMJoicimOjYqwMiCM-Lw/view">National Brochure</a>
                     </div>
                     <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
@@ -820,7 +864,7 @@
                     <br>
                     <br>
                          <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75"> -->
-                            <li class="partner-logo"><img src="img/sponsors/Rosenfeld.png" alt=""></li>
+                            <!-- <li class="partner-logo"><img  src="img/sponsors/Rosenfeld.png" alt=""></li> -->
                             <!-- <li class="partner-logo"><img src="images/partners/b-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/c-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/d-light.png" alt=""></li>
