--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                                     <li class="menu-item ">
 
-                                       <a class="menu-link nav-link menu-toggle" href="https://github.com/hackinitbpit/hackinitbpit.github.io/blob/master/code_of_conduct.md">Code of Conduct</a>
+                                       <a class="menu-link nav-link " target="_blank" href="https://github.com/hackinitbpit/hackinitbpit.github.io/blob/master/code_of_conduct.md">Code of Conduct</a>
                                     </li>
 
                                     <li class="menu-item "> 
@@ -180,10 +180,10 @@
                             <div class="col-sm-5">
                                 <ul class="social-links social-links-s2 justify-content-center justify-content-sm-end animated"
                                     data-animate="fadeInUp" data-delay="1">
-                                    <li><a href="https://www.facebook.com/bpitcsi/"><em class="fab fa-facebook-f"></em></a></li>
-                                    <li><a href="https://www.linkedin.com/company/bpitorg/about/"><em class="fab fa-linkedin-in"></em></a></li>
-                                    <li><a href="https://www.instagram.com/csi_bpit/?hl=en"><em class="fab fa-instagram"></em></a></li>
-                                    <li><a href="https://github.com/Bpitorg"><em class="fab fa-github"></em></a></li>
+                                    <li><a target="_blank" href="https://www.facebook.com/bpitcsi/"><em class="fab fa-facebook-f"></em></a></li>
+                                    <li><a target="_blank" href="https://www.linkedin.com/company/bpitorg/about/"><em class="fab fa-linkedin-in"></em></a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/csi_bpit/?hl=en"><em class="fab fa-instagram"></em></a></li>
+                                    <li><a target="_blank" href="https://github.com/Bpitorg"><em class="fab fa-github"></em></a></li>
                                 </ul>
                             </div>
                         </div>
