--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                         <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <u>hackinitbpit@gmail.com</u></h6>
                         <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
-                        <a class="btn" href="https://drive.google.com/file/d/1xJjXArYeQlJDlMJoicimOjYqwMiCM-Lw/view">National Brochure</a>
+                        <a class="btn" href="https://drive.google.com/file/d/1xJjXArYeQlJDlMJoicimOjYqwMiCM-Lw/view">Sponsorship Brochure</a>
                     </div>
                     <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
