--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                     </div>
                     <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
-                        <a class="btn" href="https://drive.google.com/file/d/1ssVyULGLccfgIvY__R7zYPooH6AnBxF8/view?usp=drivesdk">Sponsorship Brochure - IndiaInternational</a>
+                        <a class="btn" href="https://drive.google.com/file/d/1ssVyULGLccfgIvY__R7zYPooH6AnBxF8/view?usp=drivesdk">Sponsorship Brochure - International</a>
                     </div>
                     <br>
                     <br>
