--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     </li>
 
                                     <li class="menu-item "> 
-                                        <a class="menu-link nav-link menu-toggle" href="#contact">Conatct</a>
+                                        <a class="menu-link nav-link menu-toggle" href="#contact">Contact</a>
                                     </li>
                                 </ul>
 
