--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                                     <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
                                         <div class="team team-s2 team-odd">
                                             <div class="team-photo team-photo-s2">
-                                                <img src="img/Lokesh_Aggarwal.jpg" alt="">
+                                                <img src="img/Lokesh_Aggarwal2.jpg" alt="">
                                             </div>
                                             <h5 class="team-name title title-md">Lokesh Aggarwal</h5>
                                             <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
@@ -819,9 +819,9 @@
                 
                                     </div>
                                     <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
-                                        <div class="team team-s2 team-odd">
+                                        <div class="team team-s2 team-even">
                                             <div class="team-photo team-photo-s2">
-                                                <img src="img/Jalaj_Khurana.jpg" alt="">
+                                                <img src="img/Jalaj_Khurana2.jpg" alt="">
                                             </div>
                                             <h5 class="team-name title title-md">Jalaj Khurana</h5>
                                             <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
@@ -839,6 +839,22 @@
                                                 <img src="img/Anant.jpeg"alt="">
                                             </div>
                                             <h5 class="team-name title title-md">Anant Rungta</h5>
+                                            <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
+                                                        <ul class="team-social team-social-s2">
+                                                            <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
+                                                            <li><a href="#"><em class="fab fa-linkedin-in"></em></a></li>
+                                                            <li><a href="#"><em class="fab fa-twitter"></em></a></li>
+                                                        </ul> -->
+                                        </div>
+                
+                                    </div>
+
+                                    <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
+                                        <div class="team team-s2 team-odd">
+                                            <div class="team-photo team-photo-s2">
+                                                <img src="img/Gurpreet_singh.jpg"alt="">
+                                            </div>
+                                            <h5 class="team-name title title-md">Gurpreet Singh</h5>
                                             <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
                                                         <ul class="team-social team-social-s2">
                                                             <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
