--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
                         <!-- Logo @s -->
                         <div class="header-logo logo animated" data-animate="fadeInDown" data-delay=".6">
                             <div class="row">
-                                <div class="col mt-2">
+                                <div class="col mt-1">
                                     <a href="# ">
                                         <img class="" src="img/logo2.png" alt="logo">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="#" class="logo-link">
-                                        <h1 style="color: white;font-size: 40px;">
+                                        <h1 style="color: white;font-size: 40px;font-family:monospace">
                                             HackInit
                                         </h1>
                                     </a>
                                 </div>
                             </div>
-
+<!-- <img  src="img/site logo.png" class="img img-fluid"> -->
 
                         </div>
 
@@ -224,6 +224,7 @@
 
                                 <p class="animated" data-animate="fadeInUp" data-delay="0.2">
                                     <h3>CSI</h3>
+                                    <!-- <img src="img/csibpit.png" style="width: 50px"><br/><br/> -->
                                     Computer Society of India one of the most primer Government non-profit professional
                                     organization which encourages and supports research and development. At CSI-BPIT
                                     Student Chapter we understand the importance of mutual growth, learning, skill
@@ -237,6 +238,7 @@
 
                                 <p class="animated" data-animate="fadeInUp" data-delay="0.2">
                                     <h3>BOSC</h3>
+                                    <!-- <img src="img/bosclogo.png" style="height: 50px"><br/><br/> -->
                                     BPIT Open Source Community (BOSC) is the official Open source organization of BPIT.
                                     We create a platform which allows students to gain assistance and mentorship to
                                     enhance their coding ability. Our aim is to propagate the enthusiasm for coding in
@@ -941,7 +943,7 @@
                     <div class="nk-block block-partners text-center">
                         <h4 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="Core Team">Become our Sponsor
                         </h4>
-                        <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <u>hackinitbpit@gmail.com</u></h6>
+                        <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlQQLPWqfLvnxFJFDDlcSGWlLXFRxpHCzhcLTWXCDgwvKjxvLMHtsvQzsBCxWwkwwJCxrq" style="text-decoration: underline">hackinitbpit@gmail.com</a></h6>
                         <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
                         <a class="btn" href="https://drive.google.com/file/d/1xJjXArYeQlJDlMJoicimOjYqwMiCM-Lw/view">Sponsorship Brochure - India</a>
