--- a/index.html
+++ b/index.html
@@ -1293,11 +1293,14 @@
                                                         <div class="contact-text">
                                                             <span>+91 8860429500</span>
                                                         </div>
+                                                        <div class="contact-text">
+                                                            <span>+91 9582537566</span>
+                                                        </div>
                                                     </li>
                                                     <li class="animated" data-animate="fadeInUp" data-delay="0.3">
                                                         <em class="contact-icon fas fa-envelope"></em>
                                                         <div class="contact-text">
-                                                            <span>hackinitbpit@gmail.com</span>
+                                                            <span>hackinit@bpitindia.com</span>
                                                         </div>
                                                     </li>
                     
