--- a/index.html
+++ b/index.html
@@ -1291,10 +1291,13 @@
                                                     <li class="animated" data-animate="fadeInUp" data-delay="0.2">
                                                         <em class="contact-icon fas fa-phone"></em>
                                                         <div class="contact-text">
-                                                            <span>+91 8860429500</span>
+                                                            <span>+91 88604 29500</span>
                                                         </div>
+                                                    </li>
+                                                    <li class="animated" data-animate="fadeInUp" data-delay="0.2">
+                                                        <em class="contact-icon fas fa-phone"></em>
                                                         <div class="contact-text">
-                                                            <span>+91 9582537566</span>
+                                                            <span>+91 95825 37566</span>
                                                         </div>
                                                     </li>
                                                     <li class="animated" data-animate="fadeInUp" data-delay="0.3">
