--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
                         <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlQQLPWqfLvnxFJFDDlcSGWlLXFRxpHCzhcLTWXCDgwvKjxvLMHtsvQzsBCxWwkwwJCxrq" style="text-decoration: underline">hackinitbpit@gmail.com</a></h6>
                         <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
-                        <a class="btn" href="https://drive.google.com/file/d/1xJjXArYeQlJDlMJoicimOjYqwMiCM-Lw/view">Sponsorship Brochure - India</a>
+                        <a class="btn" href="https://drive.google.com/file/d/1OKrqgkiO7Fn1xfvaH8VDNzTYFsPCcLR_/view?usp=drivesdk">Sponsorship Brochure - India</a>
                     </div>
                     <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
