--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                     <br>
                          <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75"> -->
                             <a target="_blank"href="https://rosenfeldmedia.com/"><img width="250" src="img/sponsors/Rosenfeld.png" alt="" class="mr-3"></a>
-                            <a target="_blank"href="https://www.sketch.com/press/"><img width="250" src="img/sponsors/sketch.PNG" alt=""></a>
+                            <a target="_blank"href="https://www.sketch.com/"><img width="250" src="img/sponsors/sketch.PNG" alt=""></a>
                             <!-- <li class="partner-logo"><img src="images/partners/b-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/c-light.png" alt=""></li>
                             <li class="partner-logo"><img src="images/partners/d-light.png" alt=""></li>
