--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
                     <div class="nk-block block-partners text-center">
                         <h4 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="Core Team">Become our Sponsor
                         </h4>
-                        <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlQQLPWqfLvnxFJFDDlcSGWlLXFRxpHCzhcLTWXCDgwvKjxvLMHtsvQzsBCxWwkwwJCxrq" style="text-decoration: underline">hackinitbpit@gmail.com</a></h6>
+                        <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlQQLPWqfLvnxFJFDDlcSGWlLXFRxpHCzhcLTWXCDgwvKjxvLMHtsvQzsBCxWwkwwJCxrq" style="text-decoration: underline">hackinit@bpitindia.com</a></h6>
                         <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
                         <a class="btn" href="https://drive.google.com/file/d/1OKrqgkiO7Fn1xfvaH8VDNzTYFsPCcLR_/view?usp=drivesdk">Sponsorship Brochure - India</a>
