--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                             <!--  -->
                             
                         <div><a target="_blank"href="https://rosenfeldmedia.com/"><img width="250" src="img/sponsors/Rosenfeld.png" alt="" class="mr-3"></a></div>
-                        <div><a target="_blank"href="https://www.sketch.com/"><img width="250" src="img/sponsors/sketch.png" alt=""></a></div>
+                        <div><a target="_blank"href="https://www.sketch.com/"><img width="250" src="img/sponsors/sketch.PNG" alt=""></a></div>
                         <div><a target="_blank"href="https://www.inkubics.com"><img   width="150" src="img/sponsors/inkubisc.JPG" alt=""></a></div>  
                         
                       </div>
