--- a/index.html
+++ b/index.html
@@ -922,11 +922,11 @@
                     </div> -->
                     <br>
                     <br>
-                    <div > <a target="_blank"href="https://www.scriptindia.org"><img width="250" height="0" src="img/sponsors/script.jpg" alt=""></a><br></div>
+                    
                     <br>
                     <div class="flex-container">
                             <!--  -->
-                            
+                            <div style="width:55px" > <a target="_blank"href="https://www.scriptindia.org"><img width="250" height="0" src="img/sponsors/script.jpg" alt=""></a><br></div>
                         <div><a target="_blank"href="https://rosenfeldmedia.com/"><img width="250" src="img/sponsors/Rosenfeld.png" alt="" class="mr-3"></a></div>
                         <div><a target="_blank"href="https://www.sketch.com/"><img width="250" src="img/sponsors/sketch.PNG" alt=""></a></div>
                         <div><a target="_blank"href="https://www.inkubics.com"><img   width="150" src="img/sponsors/inkubisc.JPG" alt=""></a></div>  
