--- a/index.html
+++ b/index.html
@@ -926,10 +926,10 @@
                     <br>
                     <div class="flex-container">
                             <!--  -->
-                            <div style="width:55px" > <a target="_blank"href="https://www.scriptindia.org"><img width="250" height="0" src="img/sponsors/script.jpg" alt=""></a><br></div>
+                            <div> <a target="_blank"href="https://www.scriptindia.org"><img width="250px"src="img/sponsors/script.png" alt=""></a><br></div>
                         <div><a target="_blank"href="https://rosenfeldmedia.com/"><img width="250" src="img/sponsors/Rosenfeld.png" alt="" class="mr-3"></a></div>
                         <div><a target="_blank"href="https://www.sketch.com/"><img width="250" src="img/sponsors/sketch.PNG" alt=""></a></div>
-                        <div><a target="_blank"href="https://www.inkubics.com"><img   width="150" src="img/sponsors/inkubisc.JPG" alt=""></a></div>  
+                        <div><a target="_blank"href="https://www.inkubics.com"><img  width="272px" src="img/sponsors/incubics.png" alt=""></a></div>  
                         
                       </div>
                          <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75"> -->
