--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
                         <h4 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="Core Team">Become our Sponsor
                         </h4>
                         <h6 class="title title-md ttu text-center animated" data-animate="fadeInUp" data-delay="0.65">Interested in becoming a sponsor? Email us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRlQQLPWqfLvnxFJFDDlcSGWlLXFRxpHCzhcLTWXCDgwvKjxvLMHtsvQzsBCxWwkwwJCxrq" style="text-decoration: underline">hackinit@bpitindia.com</a></h6>
-                        <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
+<!--                         <div class="cpn-action animated fadeInUp text-center" data-animate="fadeInUp" data-delay="1"
                         style="visibility: visible; animation-delay: 1s;">
                         <a class="btn" href="https://drive.google.com/file/d/1yqFxj_GHASTRk1lDhgU7to2UyvRfiG1i/view?usp=sharing">Sponsorship Brochure - India</a>
                     </div>
@@ -985,7 +985,7 @@
                         style="visibility: visible; animation-delay: 1s;">
                         <a class="btn" href="https://drive.google.com/open?id=1HLd2XM1KAxQfPAIzuLzYvrPVheCy8kMM">Sponsorship Brochure - International</a>
                     </div>
-                    <br>
+                    <br> -->
                     <br>
                          <!-- <ul class="has-carousel partner-list justify-content-center animated" data-items="7" data-items-mobile="2" data-auto="true" data-loop="true" data-animate="fadeInUp" data-delay="0.75"> -->
                             <!-- <li class="partner-logo"><img  src="img/sponsors/Rosenfeld.png" alt=""></li> -->
