--- a/index.html
+++ b/index.html
@@ -937,19 +937,19 @@
                     <div class="row">
                         <div class="col-md-4 center"> <a target="_blank" href="https://matic.network/"><img width="300px" src="img/sponsors/Matic_Logo-Light.png" alt=""></a></div><br><br><br><br>
                         <div class="col-md-4 center"><a target="_blank" href="https://www.gitkraken.com/"><img  width="300px" src="img/sponsors/gitkraken_logo.png" alt="" class="mr-3"></a></div><br><br><br><br>
-                        <div class="col-md-4 center"><a target="_blank" href="https://devfolio.co/"><img width="200px" src="img/sponsors/devfolio_logo.png" alt=""></a></div><br><br><br><br>  
+                        <div class="col-md-4 center"><a target="_blank" href="https://devfolio.co/"><img width="300px" src="img/sponsors/devfolio_logo.svg" alt=""></a></div><br><br><br><br>  
                           
                     </div>
                     <div class="row">
                             <div class="col-md-4 center"><a target="_blank"href="https://www.sketch.com/"><img width="300px" src="img/sponsors/sketch.PNG" alt=""></a></div><br><br><br><br>  
-                        <div class="col-md-4 center"><a target="_blank" href="https://www.inkubics.com"><img width="300px" src="img/sponsors/incubics.png" alt=""></a></div><br><br><br><br>  
+                        <div class="col-md-4 center"><a target="_blank" href="https://www.inkubics.com"><img width="170px" src="img/sponsors/inkubics.png" alt=""></a></div><br><br><br><br>  
                         <div class="col-md-4 center"><a target="_blank" href="https://rosenfeldmedia.com/"><img  width="300px" src="img/sponsors/Rosenfeld.png" alt="" class="mr-3"></a></div><br><br><br><br>  
                     </div>
                     <br>
                     <br>
                     <div class="row">
-                            <div class="col-md-4 center"> <a target="_blank" href="https://www.scriptindia.org"><img width="150px" src="img/sponsors/script.jpg" alt=""></a><br></div><br><br><br><br>  
-                        <div class="col-md-4 center"><a target="_blank"href="https://www.creative-tim.com/"><img width="200px" src="img/sponsors/tim_logo.png" alt=""></a></div><br><br><br><br>  
+                            <div class="col-md-4 center"> <a target="_blank" href="https://www.scriptindia.org"><img width="150px" src="img/sponsors/script.png" alt=""></a><br></div><br><br><br><br>  
+                        <div class="col-md-4 center"><a target="_blank"href="https://www.creative-tim.com/"><img  src="img/sponsors/tim_logo.png" alt=""></a></div><br><br><br><br>  
                         
                     </div>
 
