--- a/index.html
+++ b/index.html
@@ -135,13 +135,16 @@
                                         HackInit is <b>CSI and BOSC's</b> flagship event to be hosted in <b>BPIT</b>.
                                     </p>
                                     <style>
-                                    .devp:hover .devlogo:hover #sv{
+                                    .devp:hover .devlogo:hover svg{
                                         fill:blue!important;
+                                    }
+                                    svg{
+                                        fill:#f1f1f1;
                                     } 
                                     </style>
                                     <div class="cpn-action animated fadeInUp devp" data-animate="fadeInUp" data-delay="1"
                                         style="visibility: visible; animation-delay: 1s;">
-                                        <a class="btn devlogo" href="https://hackinit.devfolio.co/"><svg id="sv" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px;fill:#f1f1f1"><path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z"></path><path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z"></path></svg>Apply with Devfolio</a>
+                                        <button class="btn devlogo" id="devfolio-apply-now" ><svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px;fill:#f1f1f1"><path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z"></path><path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z"></path></svg>Apply with Devfolio</button>
                                     </div>
                                 </div>
                             </div><!-- .col -->
@@ -1528,6 +1531,68 @@
     </div>
 
     <!-- JavaScript -->
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    <script>
+        //Scrolling JS
+        $(document).ready(function () {
+            // Add smooth scrolling to all links
+            $("a:not('.nav-link, .faq-li')").on('click', function (event) {
+
+                // Make sure this.hash has a value before overriding default behavior
+                if (this.hash !== "") {
+                    // Prevent default anchor click behavior
+                    event.preventDefault();
+
+                    // Store hash
+                    var hash = this.hash;
+
+                    // Using jQuery's animate() method to add smooth page scroll
+                    // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                    $('html, body').animate({
+                        scrollTop: $(hash).offset().top
+                    }, 800, function () {
+
+                        // Add hash (#) to URL when done scrolling (default click behavior)
+                        // window.location.hash = hash;
+                    });
+                } // End if
+            });
+        });
+
+        // Devfolio JS
+        document.addEventListener('DOMContentLoaded', function () {
+            let devfolioOptions = {
+                buttonSelector: '#devfolio-apply-now',
+                key: 'hackinit',
+            }
+            let script = document.createElement('script');
+            script.src = "https://apply.devfolio.co";
+            document.head.append(script);
+            script.onload = function () {
+                new Devfolio(devfolioOptions);
+            }
+            script.onerror = function () {
+                document.querySelector(devfolioOptions.buttonSelector).addEventListener('click',
+                    function () {
+                        window.location.href = 'https://devfolio.co/external-apply/' + devfolioOptions
+                            .key;
+
+                    });
+            }
+        });
+
+        // Lazy Loading Stuff
+        const observer = lozad('.lozad', {
+          loaded: function(el) {
+                // console.log("loaded...")
+                // console.log(el)
+              }
+          });
+          observer.observe();
+    </script>
     <script src="assets/js/jquery.bundle.js?ver=161"></script>
     <script src="assets/js/scripts.js?ver=161"></script>
     <script src="assets/js/charts.js"></script>
