--- a/index.html
+++ b/index.html
@@ -1080,13 +1080,7 @@
                                                             data-target="#acc-1-3">Who should attend? <span class="accordion-icon"></span></h5>
                                                         <div id="acc-1-3" class="collapse" data-parent="#acc-1">
                                                             <div class="accordion-content">
-                                                                <p>While developers are necessary for each team, anyone is welcome.
-                                                                    Tech Developers – We need tech ninjas, makers, game programmers,
-                                                                    and rebels that code. Come to hack with new hardware and tech all
-                                                                    in the name of doing something crazy and fantastic–and helpful.
-                                                                    UI/UX Designers – We need people like you to make everything look
-                                                                    beautiful, work intuitively, and create a stellar user experience.
-                                                                    Great applications require great design.
+                                                                <p>This is a student hackathon and only students are allowed to participate.
                                                                 </p>
                                                             </div>
                                                         </div>
@@ -1118,10 +1112,20 @@
                                                             data-target="#acc-1-6">Can I register individually? <span class="accordion-icon"></span></h5>
                                                         <div id="acc-1-6" class="collapse" data-parent="#acc-1">
                                                             <div class="accordion-content">
-                                                                <p>Yes, but you are required to make a team for the event beforehand.</p>
+                                                                <p>No, Team registration is mandotary.</p>
                                                             </div>
                                                         </div>
                                                     </div>
+                                                    <div class="accordion-item accordion-item-s3 animated" data-animate="fadeInUp"
+                                                    data-delay="0.7">
+                                                    <h5 class="accordion-title accordion-title-sm collapsed" data-toggle="collapse"
+                                                        data-target="#acc-1-6a">How big can my team be? <span class="accordion-icon"></span></h5>
+                                                    <div id="acc-1-6a" class="collapse" data-parent="#acc-1">
+                                                        <div class="accordion-content">
+                                                            <p>Team must consist of 4 team members max and 2 min </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                     <div class="accordion-item accordion-item-s3 animated" data-animate="fadeInUp"
                                                         data-delay="0.7">
                                                         <h5 class="accordion-title accordion-title-sm collapsed" data-toggle="collapse"
