--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@
                                                             data-target="#acc-1-6">Can I register individually? <span class="accordion-icon"></span></h5>
                                                         <div id="acc-1-6" class="collapse" data-parent="#acc-1">
                                                             <div class="accordion-content">
-                                                                <p>No, Register in team mandotary.</p>
+                                                                <p>No,Team is mandotary.</p>
                                                             </div>
                                                         </div>
                                                     </div>
